--- a/package.json
+++ b/package.json
@@ -1,43 +1,61 @@
 {
-  "name": "star-navi",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "star-navi",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/material": "^5.11.7",
+		"@reduxjs/toolkit": "^1.9.2",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/lodash": "^4.14.191",
+		"@types/node": "^16.18.11",
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"axios": "^1.3.2",
+		"classnames": "^2.3.2",
+		"concurrently": "^7.6.0",
+		"lodash": "^4.17.21",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"react-scripts": "5.0.1",
+		"sass": "^1.58.0",
+		"typed-scss-modules": "^7.0.2",
+		"typescript": "^4.9.5",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "concurrently -n \"client\" \"react-scripts start\" \"typed-scss-modules -w src/components\"",
+		"build": "react-scripts build",
+		"lint": "eslint src/",
+		"lint:fix": "eslint src/ --fix",
+		"stylelint": "stylelint \"src/**/*.scss\"",
+		"stylelint:fix": "stylelint \"src/**/*.scss\""
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"@typescript-eslint/parser": "^5.50.0",
+		"eslint": "^8.33.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"stylelint": "^14.16.1",
+		"stylelint-config-prettier-scss": "^0.0.1",
+		"stylelint-config-standard-scss": "^6.1.0",
+		"stylelint-selector-bem-pattern": "^2.1.1"
+	}
 }
